# doble

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.render  README.md  docker-compose.yml  render.yaml
.github/workflows/: keep-alive.yml
ai/: .dockerignore  Dockerfile  pyproject.toml  run.py
ai/app/: db.py  llm_client.py  main.py  settings.py
ai/app/prompts/: builder.py
ai/app/rag/: embeddings.py  owner.py  retrieval.py
ai/app/routers/: health.py  ingest.py  respond.py  retrieve.py  transcribe.py
ai/wa_agent_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
db/: init.sql
docs/: DEPLOY-RENDER.md  TEST-PLAN.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: Logo.tsx  ui.tsx
frontend/src/lib/: api.ts  useRecorder.ts  useSSE.ts
frontend/src/views/: Activity.tsx  Batch.tsx  Chats.tsx  Dashboard.tsx  Drafts.tsx  Labels.tsx  Notes.tsx  Rag.tsx
gateway/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
gateway/sender/: messages.json
gateway/src/: activity.ts  ai-client.ts  baileys.ts  config.ts  db.ts  events.ts  index.ts  owner.ts  wa-status.ts
gateway/src/api/: hosting.ts  server.ts
gateway/src/application/: proactive-messenger.ts  process-incoming-message.ts  reply-delivery.ts  retry-need-info.ts  services.ts
gateway/src/composition/: container.ts
gateway/src/domain/: base-prompts.ts  entities.ts  ports.ts  proactive-policy.ts  reply-policy.ts
gateway/src/scripts/: cli.ts  (+3 more)
(+27 files in other folders)
