[project]
name = "wa-agent-ai"
version = "0.1.0"
description = "AI service for WhatsApp agent — RAG + Gemini"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "google-genai>=0.8.0",
  "psycopg[binary,pool]>=3.2.0",
  "pgvector>=0.3.6",
  "numpy>=2.1.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.17",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
